--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,7 +43,6 @@
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
     "gh-pages": "^2.1.1",
-    "node-sass-chokidar": "^1.3.5",
-    "npm-run-all": "^4.1.5"
+    "node-sass": "^4.12.0"
   }
 }
