--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.12.0"
+    "gh-pages": "^2.1.1"
   }
 }
