--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
+    "eslint-utils": "1.4.1",
     "gh-pages": "^2.1.1"
   }
 }
