--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
