--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/styled-components": "^4.1.19",
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
