--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "deploy": "npm run build && gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +48,7 @@
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
     "eslint-utils": "1.4.1",
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.1.1",
+    "react-app-rewired": "^2.1.6"
   }
 }
