--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.19",
     "axios": "^0.19.0",
+    "eslint": "6.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
@@ -47,6 +48,12 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-utils": "1.4.1",
     "gh-pages": "^2.1.1",
     "react-app-rewired": "^2.1.6"
