prettier導入、npmスクリプト追加

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build": "react-app-rewired build",
     "deploy": "npm run build && gh-pages -d build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "lint": "npx eslint './src/**/*.{ts,tsx}'",
+    "fix": "npx eslint --fix './src/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,11 +53,14 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-utils": "1.4.1",
     "gh-pages": "^2.1.1",
+    "prettier": "^2.1.2",
     "react-app-rewired": "^2.1.6"
   }
 }
