--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,41 +1,46 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "settings": {
-        "import/resolver": {
-            "node": {
-            "extensions": [".js", ".jsx", ".ts", ".tsx"]
-            }
-        }
-        },
-        "rules": {
-        "@typescript-eslint/indent": ["error", 2],
-        "@typescript-eslint/prefer-interface": "off",
-        "react/jsx-filename-extension": [
-            "error",
-            { "extensions": [".jsx", ".tsx"] }
-        ],
-        "react/prop-types": "off",
-        "spaced-comment": ["error", "always", { "markers": ["/ <reference"] }]
-        }
+	"env": {
+		"browser": true,
+		"es6": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:prettier/recommended"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"plugins": [
+		"react",
+		"@typescript-eslint"
+	],
+	"settings": {
+		"import/resolver": {
+			"node": {
+				"extensions": [".js", ".jsx", ".ts", ".tsx"]
+			}
+		}
+	},
+	"rules": {
+		"@typescript-eslint/indent": ["error", "tab"],
+		"@typescript-eslint/prefer-interface": "off",
+		"import/extensions": ["error", "never"],
+		"import/no-unresolved": "off",
+		"react/destructuring-assignment": ["error", "never"],
+		"react/jsx-filename-extension": [
+			"error",
+			{ "extensions": [".jsx", ".tsx"] }
+		],
+		"react/jsx-indent": [2, "tab"],
+		"react/jsx-indent-props": [2, "tab"],
+		"react/prop-types": "off",
+		"spaced-comment": ["error", "always", { "markers": ["/ <reference"] }]
+	}
 }
