jsディレクトリ削除 - saga、commonTypesを移動

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
 			"@store/*": ["./src/store/*"],
-			"@js/*": ["./src/js/*"],
+			"@saga/*": ["./src/saga/*"],
       "@data/*": ["./src/data/*"],
       "@styles/*": ["./src/styles/*"],
     }
