基本ファイルリファクタ - lintエラー対応 - default export廃止

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-			"@store/*": ["./src/store/*"],
-			"@saga/*": ["./src/saga/*"],
+			"@components/*": ["./src/components/*"],
       "@data/*": ["./src/data/*"],
+			"@saga/*": ["./src/saga/*"],
+			"@store/*": ["./src/store/*"],
       "@styles/*": ["./src/styles/*"],
     }
   }
