--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,8 @@
 		"import/extensions": ["error", "never"],
 		"import/no-unresolved": "off",
 		"import/prefer-default-export": ["off"],
-		"react/destructuring-assignment": ["error", "never"],
+		"react/require-default-props": ["off"],
+		"react/destructuring-assignment": ["off"],
 		"react/jsx-filename-extension": [
 			"error",
 			{ "extensions": [".jsx", ".tsx"] }
