feat: PokeApi使用のためにapiディレクトリを作成

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
 		}
 	},
 	"rules": {
+		"camelcase": ["off"],
 		"@typescript-eslint/explicit-function-return-type": ["warn"],
 		"@typescript-eslint/indent": ["error", "tab"],
 		"@typescript-eslint/prefer-interface": "off",
