--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+			"@api/*": ["./src/api/*"],
 			"@components/*": ["./src/components/*"],
       "@data/*": ["./src/data/*"],
-			"@saga/*": ["./src/saga/*"],
 			"@store/*": ["./src/store/*"],
       "@styles/*": ["./src/styles/*"],
     }
