--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.19",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.4",
     "eslint": "6.1.0",
     "react": "^16.9.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
