--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.4",
     "eslint": "6.1.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.9.0",
