--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^4.1.19",
     "axios": "^0.19.0",
     "chart.js": "^2.9.4",
+    "classnames": "^2.2.6",
     "eslint": "6.1.0",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "4.0.1",
