--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
@@ -35,7 +34,9 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "lint": "npx eslint './src/**/*.{ts,tsx}'",
-    "fix": "npx eslint --fix './src/**/*.{ts,tsx}'"
+    "fix": "npx eslint --fix './src/**/*.{ts,tsx}'",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,6 +54,13 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.1.15",
+    "@storybook/addon-essentials": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/cli": "^6.1.15",
+    "@storybook/node-logger": "^6.1.15",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.15",
     "@types/classnames": "^2.2.11",
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
