--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "react-select": "^4.0.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^4.3.2",
@@ -63,6 +64,7 @@
     "@storybook/react": "^6.1.15",
     "@types/classnames": "^2.2.11",
     "@types/react-redux": "^7.1.1",
+    "@types/react-select": "^4.0.8",
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
