chore: packageバージョンアップ

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,8 +32,11 @@
 		"@typescript-eslint/explicit-function-return-type": ["warn"],
 		"@typescript-eslint/indent": ["off"],
 		"@typescript-eslint/prefer-interface": "off",
+		"@typescript-eslint/no-use-before-define": ["error"],
+		"no-use-before-define": "off",
 		"import/extensions": ["error", "never"],
 		"import/no-unresolved": "off",
+		"react/no-array-index-key": ["warn"],
 		"import/prefer-default-export": ["off"],
 		"react/require-default-props": ["off"],
 		"react/destructuring-assignment": ["off"],
