--- a/package.json
+++ b/package.json
@@ -3,58 +3,34 @@
   "version": "0.1.0",
   "homepage": "https://smashawk.github.io/pokedex2/",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.7",
-    "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "classnames": "^2.2.6",
-    "eslint": "7.19.0",
-    "normalize.css": "^8.0.1",
-    "react": "^17.0.1",
-    "react-chartjs-2": "^2.11.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-virtualized": "^9.22.3",
-    "react-virtualized-select": "^3.1.3",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "styled-components": "^5.2.1",
-    "typescript": "4.1.3"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "deploy": "npm run build && gh-pages -d build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "lint": "npx eslint './src/**/*.{ts,tsx}'",
-    "fix": "npx eslint --fix './src/**/*.{ts,tsx}'",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+	"scripts": {
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"deploy": "npm run build && gh-pages -d build",
+		"test": "react-app-rewired test",
+		"eject": "react-app-rewired eject",
+		"lint": "npx eslint './src/**/*.{ts,tsx}'",
+		"fix": "npx eslint --fix './src/**/*.{ts,tsx}'",
+		"storybook": "start-storybook -p 6006 -s public",
+		"build-storybook": "build-storybook -s public"
+	},
+	"dependencies": {
+		"@material-ui/core": "^4.11.3",
+		"axios": "^0.21.1",
+		"chart.js": "^2.9.4",
+		"classnames": "^2.2.6",
+		"normalize.css": "^8.0.1",
+		"react": "^17.0.1",
+		"react-chartjs-2": "^2.11.1",
+		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.1",
+		"react-virtualized": "^9.22.3",
+		"react-virtualized-select": "^3.1.3",
+		"redux": "^4.0.5",
+		"styled-components": "^5.2.1"
+	},
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.16",
     "@storybook/addon-essentials": "^6.1.16",
@@ -64,12 +40,19 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.16",
     "@types/classnames": "^2.2.11",
+		"@types/jest": "26.0.20",
+		"@types/node": "14.14.22",
+		"@types/react": "17.0.0",
+		"@types/react-dom": "17.0.0",
     "@types/react-redux": "^7.1.16",
+		"@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.11",
     "@types/react-virtualized-select": "^3.0.8",
     "@types/redux": "^3.6.31",
+		"@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
+		"eslint": "7.19.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -79,6 +62,23 @@
     "eslint-utils": "2.1.0",
     "gh-pages": "^3.1.0",
     "prettier": "^2.2.1",
-    "react-app-rewired": "^2.1.8"
-  }
+    "react-app-rewired": "^2.1.8",
+		"redux-devtools-extension": "^2.13.8",
+		"typescript": "4.1.3"
+  },
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
