--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,12 +33,13 @@
 		"@typescript-eslint/indent": ["off"],
 		"@typescript-eslint/prefer-interface": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
-		"no-use-before-define": "off",
 		"import/extensions": ["error", "never"],
 		"import/no-unresolved": "off",
-		"react/no-array-index-key": ["warn"],
 		"import/prefer-default-export": ["off"],
-		"react/require-default-props": ["off"],
+		"import/no-extraneous-dependencies": ["error", {
+			"devDependencies": ["**/store.ts"],
+			"peerDependencies": false
+		}],
 		"react/destructuring-assignment": ["off"],
 		"react/jsx-filename-extension": [
 			"error",
@@ -47,8 +48,11 @@
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-props-no-spreading": ["off"],
+		"react/no-array-index-key": ["warn"],
+		"react/require-default-props": ["off"],
 		"react/prop-types": "off",
 		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+		"no-use-before-define": "off",
 		"spaced-comment": ["error", "always", { "markers": ["/ <reference"] }]
 	}
 }
