--- a/package.json
+++ b/package.json
@@ -40,14 +40,19 @@
 		"@storybook/node-logger": "^6.1.16",
 		"@storybook/preset-create-react-app": "^3.1.5",
 		"@storybook/react": "^6.1.16",
+		"@types/chart.js": "^2.9.30",
 		"@types/classnames": "^2.2.11",
+		"@types/eslint": "7.2.6",
+		"@types/eslint-plugin-prettier": "^3.1.0",
+		"@types/gh-pages": "^3.0.0",
 		"@types/jest": "26.0.20",
 		"@types/node": "14.14.22",
+		"@types/prettier": "^2.2.1",
 		"@types/react": "17.0.0",
 		"@types/react-dom": "17.0.0",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
-		"@types/react-select": "^4.0.11",
+		"@types/react-virtualized": "^9.21.11",
 		"@types/react-virtualized-select": "^3.0.8",
 		"@types/redux": "^3.6.31",
 		"@types/styled-components": "^5.1.7",
