refactor: import reactを省略

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,9 @@
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-props-no-spreading": ["off"],
+		"react/jsx-uses-react": "off",
 		"react/no-array-index-key": ["warn"],
+		"react/react-in-jsx-scope": "off",
 		"react/require-default-props": ["off"],
 		"react/prop-types": "off",
 		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
