--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-utils": "2.1.0",
 		"gh-pages": "^3.1.0",
+		"husky": "^5.0.9",
 		"prettier": "^2.2.1",
 		"react-app-rewired": "^2.1.8",
 		"typescript": "4.1.3"
