--- a/package.json
+++ b/package.json
@@ -22,18 +22,14 @@
 		"axios": "^0.21.1",
 		"chart.js": "^2.9.4",
 		"classnames": "^2.2.6",
-		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
 		"react-chartjs-2": "^2.11.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
-		"react-virtualized": "^9.22.3",
-		"react-virtualized-select": "^3.1.3",
 		"redux": "^4.0.5",
-		"redux-devtools-extension": "^2.13.8",
-		"styled-components": "^5.2.1"
+		"redux-devtools-extension": "^2.13.8"
 	},
 	"devDependencies": {
 		"@storybook/addon-actions": "^6.1.16",
@@ -55,10 +51,7 @@
 		"@types/react-dom": "17.0.0",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
-		"@types/react-virtualized": "^9.21.11",
-		"@types/react-virtualized-select": "^3.0.8",
 		"@types/redux": "^3.6.31",
-		"@types/styled-components": "^5.1.7",
 		"@typescript-eslint/eslint-plugin": "4.14.2",
 		"@typescript-eslint/parser": "4.14.2",
 		"eslint": "7.19.0",
@@ -71,6 +64,7 @@
 		"eslint-utils": "2.1.0",
 		"gh-pages": "^3.1.0",
 		"husky": "^5.0.9",
+		"lint-staged": "^10.5.4",
 		"prettier": "^2.2.1",
 		"react-app-rewired": "^2.1.8",
 		"typescript": "4.1.3"
