--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-utils": "2.1.0",
 		"gh-pages": "^3.1.0",
-		"husky": "^5.0.9",
+		"husky": "4.3.0",
 		"lint-staged": "^10.5.4",
 		"prettier": "^2.2.1",
 		"react-app-rewired": "^2.1.8",
@@ -92,7 +92,8 @@
 	"lint-staged": {
 		"src/**/*.{js,jsx,ts,tsx}": [
 			"prettier --write --loglevel=warn",
-			"eslint --fix"
+			"eslint --fix",
+			"eslint  --max-warnings=0"
 		]
 	}
 }
