--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
 		],
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
+		"react/jsx-one-expression-per-line": "off",
 		"react/jsx-props-no-spreading": ["off"],
 		"react/jsx-uses-react": "off",
 		"react/no-array-index-key": ["warn"],
