--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
 		"redux": "^4.0.5",
-		"redux-devtools-extension": "^2.13.8"
+		"redux-devtools-extension": "^2.13.8",
+		"redux-saga": "^1.1.3"
 	},
 	"devDependencies": {
 		"@storybook/addon-actions": "^6.1.16",
