feat: use saga in SearchName's getPokeData

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
 	},
 	"rules": {
 		"camelcase": ["off"],
-		"@typescript-eslint/explicit-function-return-type": ["warn"],
+		"@typescript-eslint/explicit-function-return-type": ["off"],
+		"@typescript-eslint/explicit-module-boundary-types": ["off"],
 		"@typescript-eslint/indent": ["off"],
 		"@typescript-eslint/prefer-interface": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
