--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,6 +4,7 @@
     "paths": {
 			"@api/*": ["./src/api/*"],
 			"@components/*": ["./src/components/*"],
+			"@containers/*": ["./src/containers/*"],
       "@data/*": ["./src/data/*"],
 			"@sagas/*": ["./src/sagas/*"],
 			"@store/*": ["./src/store/*"],
