refactor: add constants directory

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,6 +4,7 @@
     "paths": {
 			"@api/*": ["./src/api/*"],
 			"@components/*": ["./src/components/*"],
+			"@constants/*": ["./src/constants/*"],
 			"@containers/*": ["./src/containers/*"],
       "@data/*": ["./src/data/*"],
 			"@sagas/*": ["./src/sagas/*"],
