--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/redux": "^3.6.31",
+		"@types/storybook-react-router": "^1.0.1",
 		"@typescript-eslint/eslint-plugin": "4.14.2",
 		"@typescript-eslint/parser": "4.14.2",
 		"eslint": "7.19.0",
@@ -68,6 +69,7 @@
 		"lint-staged": "^10.5.4",
 		"prettier": "^2.2.1",
 		"react-app-rewired": "^2.1.8",
+		"storybook-react-router": "^1.0.8",
 		"typescript": "4.1.3"
 	},
 	"eslintConfig": {
