--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"redux-saga": "^1.1.3"
 	},
 	"devDependencies": {
+		"@storybook/addon-a11y": "^6.1.20",
 		"@storybook/addon-actions": "^6.1.16",
 		"@storybook/addon-essentials": "^6.1.16",
 		"@storybook/addon-links": "^6.1.16",
