feat: add test in all API

--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
 			"@api/(.*)": [
 				"<rootDir>/src/api/$1"
 			],
+			"@constants/(.*)": [
+				"<rootDir>/src/constants/$1"
+			],
 			"@utils/(.*)": [
 				"<rootDir>/src/utils/$1"
 			]
