--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
 		"@typescript-eslint/indent": ["off"],
 		"@typescript-eslint/prefer-interface": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
-		"import/extensions": ["error", "never"],
+		"import/extensions": ["error", "never", { "json": "always" }],
 		"import/no-unresolved": "off",
 		"import/prefer-default-export": ["off"],
 		"import/no-extraneous-dependencies": ["error", {
