--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"start": "react-app-rewired start",
 		"build": "react-app-rewired build",
 		"test": "react-app-rewired test",
+		"cypress": "cypress open",
+		"cypress:run": "cypress run",
 		"eject": "react-app-rewired eject",
 		"lint": "eslint './src/**/*.{js,jsx,ts,tsx}'",
 		"fix": "eslint --fix './src/**/*.{js,jsx,ts,tsx}'",
@@ -56,6 +58,7 @@
 		"@typescript-eslint/parser": "4.14.2",
 		"axios-mock-adapter": "^1.19.0",
 		"babel-jest": "^26.6.3",
+		"cypress": "^6.6.0",
 		"eslint": "7.19.0",
 		"eslint-config-airbnb": "^18.2.1",
 		"eslint-config-prettier": "^7.2.0",
