refactor: circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.0
 jobs:
-  test-build-deploy:
-    executor:
-      name: default
+  build:
+    docker:
+      - image: circleci/node:14
     steps:
+      - checkout
       - run: yarn
       # テスト
       - run: yarn test
@@ -19,7 +20,7 @@ jobs:
 workflows:
   build-and-test:
     jobs:
-      - test-build-deploy:
-        filters:
-          branches:
-            only: master
+      - build:
+          filters:
+            branches:
+              only: master
