--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"axios": "^0.21.1",
 		"chart.js": "^2.9.4",
 		"classnames": "^2.2.6",
+		"netlify-cli": "^3.10.6",
 		"react": "^17.0.1",
 		"react-chartjs-2": "^2.11.1",
 		"react-dom": "^17.0.1",
