--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"prettier": "^2.2.1",
 		"react-app-rewired": "^2.1.8",
 		"redux-saga-test-plan": "^4.0.0-beta.2",
+		"storybook-a11y-report": "^0.0.11",
 		"storybook-react-router": "^1.0.8",
 		"typescript": "4.1.3"
 	},
