--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"chart.js": "^2.9.4",
 		"classnames": "^2.2.6",
 		"formik": "^2.2.6",
+		"html2canvas": "^1.0.0-rc.7",
 		"netlify-cli": "^3.10.6",
 		"react": "^17.0.1",
 		"react-chartjs-2": "^2.11.1",
